@@ -1,3 +1,7 @@
+2013-01-18  Karl Berry  <karl@tug.org>
+
+	* writet1.c: apply diffs (cast removals) from pdftex.
+
 2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* squeeze/Makefile.am: Enable silent rules.
